# SNIPPET

./: README.md  main.py  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/routes/: auth.py  snippets.py
app/core/: config.py  logger.py
app/db/: base.py  init_db.py  session.py
app/models/: snippet.py  user.py
app/schemas/: snippet.py
app/services/: auth.py  snippet_service.py
src/api/: dependencies.py
src/api/routes/: auth.py  snippets.py
src/auth/: auth.py
src/core/: config.py
src/db/: db.py  init_db.py
src/models/: roles.py  snippet.py  user.py
src/schemas/: user.py
src/services/: auth.py  snippet_service.py
src/tests/: test_snippets.py
