[project]
name = "pythonproject23"
version = "0.1.0"
description = "Your project description"
authors = [
    {name = "Maxs", email = "maxs05112001@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic (<2.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "fastapi (>=0.100.0,<1.0.0)",  # Добавлен FastAPI
    "sqlalchemy (>=2.0.0,<3.0.0)",  # Добавлен SQLAlchemy
    "asyncpg (>=0.25.0,<1.0.0)",    # Добавлен асинхронный драйвер для PostgreSQL
]

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.18.3"
black = "^23.3.0"
ruff = "^0.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"